--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_DRIVE_CLIENT_ID=912452499228-iavu3ov5oufq5kh7jrl1ismo9uh4nhvm.apps.googleusercontent.com
+GOOGLE_DRIVE_CLIENT_SECRET=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
+GOOGLE_DRIVE_REFRESH_TOKEN=1//04yBG4hIr_Y0bCgYIARAAGAQSNwF-L9Ir01uXIwBuWbDldEXfvmHVB9zWem87a8_4lrSJmbYFRKrMrLC4ir5SzJeEm922VomN4Zs
+# GOOGLE_DRIVE_FOLDER_ID=1aRdHrEBfmDMH1xOclsL_Nn5EMGmCJZCs
+GOOGLE_DRIVE_FOLDER="Elearning VKU"
